ingress-domain-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-docker-kubernetes-subdomain-ingress
  labels:
    name: go-docker-kubernetes-subdomain-ingress
spec:
  rules:
  - host: go-docker-kubernetes.go-docker-kubernetes.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-docker-kubernetes-service
            port: 
              number: 9090
  - host: go-docker-kubernetes-2.go-docker-kubernetes.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-docker-kubernetes-2-service
            port: 
              number: 9090
