ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  labels:
    name: k8s-ingress
spec:
  rules:
  - host: go-docker-kubernetes.com
    http:
      paths:
      - pathType: Prefix
        path: "/go-docker-kubernetes"
        backend:
          service:
            name: go-docker-kubernetes-service
            port: 
              number: 9090
      - pathType: Prefix
        path: "/go-docker-kubernetes-2"
        backend:
          service:
            name: go-docker-kubernetes-2-service
            port: 
              number: 9090
